--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -3,4 +3,20 @@ P8105\_hw3\_gl2677
 Gaotong LIU
 10/5/2019
 
+## Problem 0
 
+describing some key variables, and giving illstrative examples of
+observations. There are 1,384,617 observations of 131,209 unique users
+and 15 vaiables in the `instacart` dataset, where each row is a product
+from an order. The key variables are
+
+``` r
+aisle = instacart %>% 
+  group_by(aisle) %>% 
+  summarize(n = n()) 
+aisle %>% 
+  filter(min_rank(desc(n)) == 1)
+```
+
+  - There are 134 aisles are in the dataset, and `fresh vegetables` are
+    the most items ordered from.
