--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -20,3 +20,27 @@ aisle %>%
 
   - There are 134 aisles are in the dataset, and `fresh vegetables` are
     the most items ordered from.
+
+<!-- end list -->
+
+``` r
+instacart %>% 
+  mutate(aisle_id = as.character(aisle_id),
+         aisle_name_id = paste(aisle, aisle_id, sep = "-")) %>% 
+  group_by(aisle_id, aisle_name_id) %>% 
+  summarize(n = n()) %>% 
+  filter(n > 10000) %>% 
+  ungroup %>% 
+  mutate(aisle_id = forcats::fct_reorder(aisle_id, n))  %>% 
+  ggplot(aes(x = aisle_id, y = n, fill = aisle_name_id)) +
+  geom_bar(stat = "identity") +
+  viridis::scale_fill_viridis(discrete = TRUE) +
+  labs(title = "The number of items ordered in each aisle",
+       x = "Aisle-id",
+       y = "The number of items",
+       fill = "") +
+  theme(legend.key.size = unit(0.1, "cm")) +
+  guides(fill = guide_legend(nrow = 10, byrow = TRUE))
+```
+
+<img src="P8105_hw3_gl2677_files/figure-gfm/plot-1.png" width="90%" />
