--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -44,3 +44,191 @@ instacart %>%
 ```
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/plot-1.png" width="90%" />
+
+``` r
+instacart %>% 
+  filter(aisle == c("baking ingredients","dog food care", "packaged vegetables fruits")) %>%
+  group_by(product_name, aisle) %>% 
+  summarize(n = n()) %>% 
+  group_by(aisle) %>% 
+  filter(min_rank(desc(n)) <= 3) %>%
+  arrange(aisle) %>% 
+  ungroup() %>%
+  select(-aisle) %>% 
+  pivot_wider(names_from = product_name,
+              values_from = n) %>% 
+  knitr::kable(caption = "The number of times each item is ordered against the three most popular items in each aisle.") %>% 
+  add_header_above(c("baking ingredients" = 3,"dog food care" = 3, "packaged vegetables fruits" = 3))
+```
+
+<table>
+
+<caption>
+
+The number of times each item is ordered against the three most popular
+items in each
+aisle.
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
+
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+
+baking
+ingredients
+
+</div>
+
+</th>
+
+<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
+
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+
+dog food
+care
+
+</div>
+
+</th>
+
+<th style="border-bottom:hidden; padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="3">
+
+<div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">
+
+packaged vegetables fruits
+
+</div>
+
+</th>
+
+</tr>
+
+<tr>
+
+<th style="text-align:right;">
+
+Light Brown Sugar
+
+</th>
+
+<th style="text-align:right;">
+
+Organic Vanilla Extract
+
+</th>
+
+<th style="text-align:right;">
+
+Pure Baking Soda
+
+</th>
+
+<th style="text-align:right;">
+
+Organix Chicken & Brown Rice Recipe
+
+</th>
+
+<th style="text-align:right;">
+
+Organix Grain Free Chicken & Vegetable Dog Food
+
+</th>
+
+<th style="text-align:right;">
+
+Original Dry Dog
+
+</th>
+
+<th style="text-align:right;">
+
+Organic Baby Spinach
+
+</th>
+
+<th style="text-align:right;">
+
+Organic Blueberries
+
+</th>
+
+<th style="text-align:right;">
+
+Organic Raspberries
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:right;">
+
+157
+
+</td>
+
+<td style="text-align:right;">
+
+122
+
+</td>
+
+<td style="text-align:right;">
+
+140
+
+</td>
+
+<td style="text-align:right;">
+
+13
+
+</td>
+
+<td style="text-align:right;">
+
+14
+
+</td>
+
+<td style="text-align:right;">
+
+9
+
+</td>
+
+<td style="text-align:right;">
+
+3324
+
+</td>
+
+<td style="text-align:right;">
+
+1692
+
+</td>
+
+<td style="text-align:right;">
+
+1920
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
