--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -232,3 +232,217 @@ Organic Raspberries
 </tbody>
 
 </table>
+
+``` r
+instacart %>% 
+  filter(product_name %in% c("Pink Lady Apples","Coffee Ice Cream")) %>%
+  group_by(product_name, order_dow) %>% 
+  summarize(mean_h = mean(order_hour_of_day)) %>% 
+  pivot_wider(names_from = product_name,
+              values_from = mean_h) %>% 
+  mutate(order_dow = recode(order_dow, `0` = "Sunday",
+                            `1` = "Monday",
+                            `2` = "Tuesday",
+                            `3` = "Wednesday",
+                            `4` = "Thursday",
+                            `5` = "Friday",
+                            `6` = "Saturday")) %>% 
+  rename("order day" = order_dow) %>% 
+  knitr::kable(digits = 0,
+               caption = "The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week")
+```
+
+<table>
+
+<caption>
+
+The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream
+are ordered on each day of the week
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+order day
+
+</th>
+
+<th style="text-align:right;">
+
+Coffee Ice Cream
+
+</th>
+
+<th style="text-align:right;">
+
+Pink Lady Apples
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+14
+
+</td>
+
+<td style="text-align:right;">
+
+13
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+14
+
+</td>
+
+<td style="text-align:right;">
+
+11
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+15
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+15
+
+</td>
+
+<td style="text-align:right;">
+
+14
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+15
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+<td style="text-align:right;">
+
+13
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+14
+
+</td>
+
+<td style="text-align:right;">
+
+12
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
