--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -3,12 +3,23 @@ P8105\_hw3\_gl2677
 Gaotong LIU
 10/5/2019
 
-## Problem 0
+## Problem 1
 
-describing some key variables, and giving illstrative examples of
-observations. There are 1,384,617 observations of 131,209 unique users
-and 15 vaiables in the `instacart` dataset, where each row is a product
-from an order. The key variables are
+There are 1,384,617 observations of 131,209 unique users and 15 vaiables
+in the `instacart` dataset, where each row is a product from an order.
+The key variables are the ID and name of product, aisle, department,
+together with the hour of the day and the day of the week on which the
+order was placed.
+
+Here is an illstrative example of observations. The first 8 rows are
+from the same order with ID numerber `1` for the user with ID numerber
+`112108`. This is the `4`th order this user has placed, and it has been
+`9` days since the last order. In this order, there are total 8
+products. The `1`st product added to cart was `Bulgarian Yogurt` with ID
+number `49302` from `yogurt` aisle with ID number`120`, `dairy eggs`
+department with ID number `16`. This producthas been ordered by this
+user in the past and it was placed on `10` o’clock, `Thursday` this
+time.
 
 ``` r
 aisle = instacart %>% 
@@ -446,3 +457,5 @@ Saturday
 </tbody>
 
 </table>
+
+## Problem 1
