--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -22,6 +22,7 @@ user in the past and it was placed on `10` o’clock, `Thursday` this
 time.
 
 ``` r
+data("instacart")
 aisle = instacart %>% 
   group_by(aisle) %>% 
   summarize(n = n()) 
@@ -459,3 +460,35 @@ Saturday
 </table>
 
 ## Problem 1
+
+``` r
+data("brfss_smart2010")
+overall_health = brfss_smart2010 %>% 
+  janitor::clean_names() %>% 
+  filter(topic == "Overall Health" & response !="Very good") %>% 
+  mutate(response = forcats::fct_relevel(response, c("Poor", "Good", "Fair", "Excellent"))) 
+```
+
+``` r
+states_2002 = overall_health %>% 
+  filter(year == 2002) %>% 
+  group_by(locationabbr) %>% 
+  summarize(n = n()) %>% 
+  filter(n >= 7) %>% 
+  pull(locationabbr)
+
+states_2010 = overall_health %>% 
+  filter(year == 2010) %>% 
+  group_by(locationabbr) %>% 
+  summarize(n = n()) %>% 
+  filter(n >= 7) %>% 
+  pull(locationabbr)
+```
+
+In 2002, total `36` states (`AZ, CO, CT, DE, FL, GA, HI, ID, IL, IN, KS,
+LA, MA, MD, ME, MI, MN, MO, NC, NE, NH, NJ, NV, NY, OH, OK, OR, PA, RI,
+SC, SD, TN, TX, UT, VT, WA`) were observed at 7 or more locations. In
+2010, total `45` states (`AL, AR, AZ, CA, CO, CT, DE, FL, GA, HI, IA,
+ID, IL, IN, KS, LA, MA, MD, ME, MI, MN, MO, MS, MT, NC, ND, NE, NH, NJ,
+NM, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX, UT, VT, WA, WY`) were
+observed at 7 or more locations.
