--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -492,3 +492,16 @@ SC, SD, TN, TX, UT, VT, WA`) were observed at 7 or more locations. In
 ID, IL, IN, KS, LA, MA, MD, ME, MI, MN, MO, MS, MT, NC, ND, NE, NH, NJ,
 NM, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX, UT, VT, WA, WY`) were
 observed at 7 or more locations.
+
+``` r
+overall_health %>% 
+  filter(response == "Excellent") %>% 
+  group_by(locationabbr,year) %>% 
+  summarize(mean_data_value = mean(data_value)) %>% 
+  ggplot(aes(x = year, y = mean_data_value, color = locationabbr)) +
+  geom_line() +
+  labs(title = "Average data value over time within a state",
+       subtitle = "limited to Excellent responses")
+```
+
+<img src="P8105_hw3_gl2677_files/figure-gfm/excellent-1.png" width="90%" />
