--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -459,7 +459,7 @@ Saturday
 
 </table>
 
-## Problem 1
+## Problem 2
 
 ``` r
 data("brfss_smart2010")
@@ -485,13 +485,15 @@ states_2010 = overall_health %>%
   pull(locationabbr)
 ```
 
-In 2002, total `36` states (`AZ, CO, CT, DE, FL, GA, HI, ID, IL, IN, KS,
-LA, MA, MD, ME, MI, MN, MO, NC, NE, NH, NJ, NV, NY, OH, OK, OR, PA, RI,
-SC, SD, TN, TX, UT, VT, WA`) were observed at 7 or more locations. In
-2010, total `45` states (`AL, AR, AZ, CA, CO, CT, DE, FL, GA, HI, IA,
-ID, IL, IN, KS, LA, MA, MD, ME, MI, MN, MO, MS, MT, NC, ND, NE, NH, NJ,
-NM, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX, UT, VT, WA, WY`) were
-observed at 7 or more locations.
+  - In 2002, total `36` states (`AZ, CO, CT, DE, FL, GA, HI, ID, IL, IN,
+    KS, LA, MA, MD, ME, MI, MN, MO, NC, NE, NH, NJ, NV, NY, OH, OK, OR,
+    PA, RI, SC, SD, TN, TX, UT, VT, WA`) were observed at 7 or more
+    locations. In 2010, total `45` states (`AL, AR, AZ, CA, CO, CT, DE,
+    FL, GA, HI, IA, ID, IL, IN, KS, LA, MA, MD, ME, MI, MN, MO, MS, MT,
+    NC, ND, NE, NH, NJ, NM, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX,
+    UT, VT, WA, WY`) were observed at 7 or more locations.
+
+<!-- end list -->
 
 ``` r
 overall_health %>% 
@@ -535,3 +537,24 @@ data_value_2006 / data_value_2010
 ```
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/two-panel-1.png" width="90%" />
+
+## Problem 3
+
+``` r
+activity = read_csv("./data/accel_data.csv") %>% 
+  janitor::clean_names() %>% 
+  pivot_longer(activity_1:activity_1440, 
+               names_to = "minute",
+               names_prefix = "activity_",
+               values_to = "activity_counts") %>% 
+  mutate(minute = as.numeric(minute),
+         weekday = factor(day %in% c("Sunday", "Saturday"), 
+                          levels = c(TRUE, FALSE), 
+                          labels = c("weekend", "weekday"))) 
+```
+
+  - There are 50400 observations and 6 variables in `acticity` dataset.
+    The variables are week, day\_id, day, minute, activity\_counts,
+    weekday. For each observation, the dataset shows the activity counts
+    for the exact minute of a 24-hour day starting at midnight on exact
+    day and exact week.
