--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -546,15 +546,367 @@ activity = read_csv("./data/accel_data.csv") %>%
   pivot_longer(activity_1:activity_1440, 
                names_to = "minute",
                names_prefix = "activity_",
-               values_to = "activity_counts") %>% 
+               values_to = "minute_activity") %>% 
   mutate(minute = as.numeric(minute),
+         week = as.factor(week),
+         hour = minute %/% 60,
          weekday = factor(day %in% c("Sunday", "Saturday"), 
                           levels = c(TRUE, FALSE), 
-                          labels = c("weekend", "weekday"))) 
+                          labels = c("weekend", "weekday")),
+         day = forcats::fct_relevel(day, c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday","Sunday")))   
 ```
 
-  - There are 50400 observations and 6 variables in `acticity` dataset.
-    The variables are week, day\_id, day, minute, activity\_counts,
-    weekday. For each observation, the dataset shows the activity counts
-    for the exact minute of a 24-hour day starting at midnight on exact
-    day and exact week.
+  - There are 50400 observations and 7 variables in `acticity` dataset.
+    The variables are week, day\_id, day, minute, minute\_activity,
+    hour, weekday. For each observation, the dataset shows the activity
+    counts for the exact minute of a 24-hour day starting at midnight on
+    exact day and exact week.
+
+<!-- end list -->
+
+``` r
+activity %>% 
+  group_by(week, day) %>% 
+  summarize(day_activity = sum(minute_activity)) %>% 
+  pivot_wider(names_from = day,
+              values_from = day_activity) %>% 
+  knitr::kable(digits = 0) 
+```
+
+<table>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+week
+
+</th>
+
+<th style="text-align:right;">
+
+Monday
+
+</th>
+
+<th style="text-align:right;">
+
+Tuesday
+
+</th>
+
+<th style="text-align:right;">
+
+Wednesday
+
+</th>
+
+<th style="text-align:right;">
+
+Thursday
+
+</th>
+
+<th style="text-align:right;">
+
+Friday
+
+</th>
+
+<th style="text-align:right;">
+
+Saturday
+
+</th>
+
+<th style="text-align:right;">
+
+Sunday
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+1
+
+</td>
+
+<td style="text-align:right;">
+
+78828
+
+</td>
+
+<td style="text-align:right;">
+
+307094
+
+</td>
+
+<td style="text-align:right;">
+
+340115
+
+</td>
+
+<td style="text-align:right;">
+
+355924
+
+</td>
+
+<td style="text-align:right;">
+
+480543
+
+</td>
+
+<td style="text-align:right;">
+
+376254
+
+</td>
+
+<td style="text-align:right;">
+
+631105
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+2
+
+</td>
+
+<td style="text-align:right;">
+
+295431
+
+</td>
+
+<td style="text-align:right;">
+
+423245
+
+</td>
+
+<td style="text-align:right;">
+
+440962
+
+</td>
+
+<td style="text-align:right;">
+
+474048
+
+</td>
+
+<td style="text-align:right;">
+
+568839
+
+</td>
+
+<td style="text-align:right;">
+
+607175
+
+</td>
+
+<td style="text-align:right;">
+
+422018
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+3
+
+</td>
+
+<td style="text-align:right;">
+
+685910
+
+</td>
+
+<td style="text-align:right;">
+
+381507
+
+</td>
+
+<td style="text-align:right;">
+
+468869
+
+</td>
+
+<td style="text-align:right;">
+
+371230
+
+</td>
+
+<td style="text-align:right;">
+
+467420
+
+</td>
+
+<td style="text-align:right;">
+
+382928
+
+</td>
+
+<td style="text-align:right;">
+
+467052
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+4
+
+</td>
+
+<td style="text-align:right;">
+
+409450
+
+</td>
+
+<td style="text-align:right;">
+
+319568
+
+</td>
+
+<td style="text-align:right;">
+
+434460
+
+</td>
+
+<td style="text-align:right;">
+
+340291
+
+</td>
+
+<td style="text-align:right;">
+
+154049
+
+</td>
+
+<td style="text-align:right;">
+
+1440
+
+</td>
+
+<td style="text-align:right;">
+
+260617
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+5
+
+</td>
+
+<td style="text-align:right;">
+
+389080
+
+</td>
+
+<td style="text-align:right;">
+
+367824
+
+</td>
+
+<td style="text-align:right;">
+
+445366
+
+</td>
+
+<td style="text-align:right;">
+
+549658
+
+</td>
+
+<td style="text-align:right;">
+
+620860
+
+</td>
+
+<td style="text-align:right;">
+
+1440
+
+</td>
+
+<td style="text-align:right;">
+
+138421
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+``` r
+day_plot = activity %>% 
+  group_by(week, day) %>% 
+  summarize(day_activity = sum(minute_activity)) %>% 
+  ggplot(aes(x = day, y = day_activity, color = week, group = week)) +
+  geom_point() +
+  geom_line()
+```
+
+  - The accelerometer acticity counts for all five weeks increase on
+    Wednesday comparing to Tuesday. and they all are numerically similar
+    between Tuesday and Thursay. The activity counts on Saturday drop to
+    the same value in week 4 and week 5.
