--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -910,3 +910,21 @@ day_plot = activity %>%
     Wednesday comparing to Tuesday. and they all are numerically similar
     between Tuesday and Thursay. The activity counts on Saturday drop to
     the same value in week 4 and week 5.
+
+<!-- end list -->
+
+``` r
+activity %>% 
+  group_by(day, hour) %>% 
+  summarize(mean_hour_activity = mean(minute_activity)) %>% 
+  ggplot(aes(x = hour, y = mean_hour_activity,
+             color = day, group = day)) +
+  geom_point(alpha = .3) +
+  geom_line() +
+  xlim(0, 24)
+```
+
+<img src="P8105_hw3_gl2677_files/figure-gfm/minute_activity plot-1.png" width="90%" />
+
+  - Describe in words any patterns or conclusions you can make based on
+    this graph.
