--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -23,39 +23,42 @@ time.
 
 ``` r
 data("instacart")
-aisle = instacart %>% 
+instacart %>% 
   group_by(aisle) %>% 
-  summarize(n = n()) 
-aisle %>% 
-  filter(min_rank(desc(n)) == 1)
+  summarize(n = n()) %>% 
+  arrange(desc(n))
 ```
 
-  - There are 134 aisles are in the dataset, and `fresh vegetables` are
-    the most items ordered from.
+  - There are totally 134 aisles in the dataset. `fresh vegetables` are
+    the most items ordered from, and the majority of items are ordered
+    from `fresh vegetables` and `fresh fruits`.
 
 <!-- end list -->
 
 ``` r
 instacart %>% 
-  mutate(aisle_id = as.character(aisle_id),
-         aisle_name_id = paste(aisle, aisle_id, sep = "-")) %>% 
-  group_by(aisle_id, aisle_name_id) %>% 
+  group_by(aisle) %>% 
   summarize(n = n()) %>% 
   filter(n > 10000) %>% 
-  ungroup %>% 
-  mutate(aisle_id = forcats::fct_reorder(aisle_id, n))  %>% 
-  ggplot(aes(x = aisle_id, y = n, fill = aisle_name_id)) +
+  mutate(aisle = forcats::fct_reorder(aisle, n)) %>% 
+  ggplot(aes(x = aisle, y = n, fill = aisle)) +
   geom_bar(stat = "identity") +
-  viridis::scale_fill_viridis(discrete = TRUE) +
   labs(title = "The number of items ordered in each aisle",
-       x = "Aisle-id",
-       y = "The number of items",
-       fill = "") +
-  theme(legend.key.size = unit(0.1, "cm")) +
-  guides(fill = guide_legend(nrow = 10, byrow = TRUE))
+       x = "Aisle",
+       y = "The number of items") +
+  theme(axis.text.x = element_text(angle = 60, hjust = 1),
+        legend.position = "none")
 ```
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/plot-1.png" width="90%" />
+
+  - From the plot, it shows most of items ordered in `fresh vegetables`,
+    `fresh fruits`, and `packaged vegetables fruits`, and totally around
+    375,000 items are oredered in these three aisles. People mainly use
+    The Instacart Online Grocery Shopping to buy vegetables and fruits
+    in 2017.
+
+<!-- end list -->
 
 ``` r
 instacart %>% 
@@ -245,23 +248,28 @@ Organic Raspberries
 
 </table>
 
+  - `packaged vegetables fruits` is the most frequently ordered aisles,
+    and `dog food care` is the least frequently ordered ones. Organic
+    ingredients are often picked in these three aisles.
+
+<!-- end list -->
+
 ``` r
 instacart %>% 
   filter(product_name %in% c("Pink Lady Apples","Coffee Ice Cream")) %>%
   group_by(product_name, order_dow) %>% 
-  summarize(mean_h = mean(order_hour_of_day)) %>% 
-  pivot_wider(names_from = product_name,
-              values_from = mean_h) %>% 
+  summarize(mean_h = round(mean(order_hour_of_day))) %>% 
   mutate(order_dow = recode(order_dow, `0` = "Sunday",
                             `1` = "Monday",
                             `2` = "Tuesday",
                             `3` = "Wednesday",
                             `4` = "Thursday",
                             `5` = "Friday",
-                            `6` = "Saturday")) %>% 
-  rename("order day" = order_dow) %>% 
-  knitr::kable(digits = 0,
-               caption = "The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week")
+                            `6` = "Saturday"),
+         mean_h = str_c(mean_h, "00", sep = ":")) %>%
+  pivot_wider(names_from = order_dow,
+              values_from = mean_h) %>% 
+  knitr::kable(caption = "The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered") 
 ```
 
 <table>
@@ -269,7 +277,7 @@ instacart %>%
 <caption>
 
 The mean hour of the day at which Pink Lady Apples and Coffee Ice Cream
-are ordered on each day of the week
+are ordered
 
 </caption>
 
@@ -279,19 +287,49 @@ are ordered on each day of the week
 
 <th style="text-align:left;">
 
-order day
+product\_name
 
 </th>
 
-<th style="text-align:right;">
+<th style="text-align:left;">
 
-Coffee Ice Cream
+Sunday
 
 </th>
 
-<th style="text-align:right;">
+<th style="text-align:left;">
 
-Pink Lady Apples
+Monday
+
+</th>
+
+<th style="text-align:left;">
+
+Tuesday
+
+</th>
+
+<th style="text-align:left;">
+
+Wednesday
+
+</th>
+
+<th style="text-align:left;">
+
+Thursday
+
+</th>
+
+<th style="text-align:left;">
+
+Friday
+
+</th>
+
+<th style="text-align:left;">
+
+Saturday
 
 </th>
 
@@ -305,19 +343,49 @@ Pink Lady Apples
 
 <td style="text-align:left;">
 
-Sunday
+Coffee Ice Cream
 
 </td>
 
-<td style="text-align:right;">
+<td style="text-align:left;">
 
-14
+14:00
 
 </td>
 
-<td style="text-align:right;">
+<td style="text-align:left;">
 
-13
+14:00
+
+</td>
+
+<td style="text-align:left;">
+
+15:00
+
+</td>
+
+<td style="text-align:left;">
+
+15:00
+
+</td>
+
+<td style="text-align:left;">
+
+15:00
+
+</td>
+
+<td style="text-align:left;">
+
+12:00
+
+</td>
+
+<td style="text-align:left;">
+
+14:00
 
 </td>
 
@@ -327,129 +395,49 @@ Sunday
 
 <td style="text-align:left;">
 
-Monday
+Pink Lady Apples
 
 </td>
-
-<td style="text-align:right;">
-
-14
-
-</td>
-
-<td style="text-align:right;">
-
-11
-
-</td>
-
-</tr>
-
-<tr>
 
 <td style="text-align:left;">
 
-Tuesday
+13:00
 
 </td>
-
-<td style="text-align:right;">
-
-15
-
-</td>
-
-<td style="text-align:right;">
-
-12
-
-</td>
-
-</tr>
-
-<tr>
 
 <td style="text-align:left;">
 
-Wednesday
+11:00
 
 </td>
-
-<td style="text-align:right;">
-
-15
-
-</td>
-
-<td style="text-align:right;">
-
-14
-
-</td>
-
-</tr>
-
-<tr>
 
 <td style="text-align:left;">
 
-Thursday
+12:00
 
 </td>
-
-<td style="text-align:right;">
-
-15
-
-</td>
-
-<td style="text-align:right;">
-
-12
-
-</td>
-
-</tr>
-
-<tr>
 
 <td style="text-align:left;">
 
-Friday
+14:00
 
 </td>
-
-<td style="text-align:right;">
-
-12
-
-</td>
-
-<td style="text-align:right;">
-
-13
-
-</td>
-
-</tr>
-
-<tr>
 
 <td style="text-align:left;">
 
-Saturday
+12:00
 
 </td>
 
-<td style="text-align:right;">
+<td style="text-align:left;">
 
-14
+13:00
 
 </td>
 
-<td style="text-align:right;">
+<td style="text-align:left;">
 
-12
+12:00
 
 </td>
 
@@ -458,6 +446,11 @@ Saturday
 </tbody>
 
 </table>
+
+  - Most of `Coffee Ice Cream` is ordered between two o’clock and three
+    o’clock in the afternoon during the week. `Pink Lady Apples` is
+    ordered with unfixed time, which is between eleven o’clock in the
+    morning and two o’clock in the afternoon.
 
 ## Problem 2
 
