--- a/P8105_hw3_gl2677.Rmd
+++ b/P8105_hw3_gl2677.Rmd
@@ -108,63 +108,78 @@ data("brfss_smart2010")
 overall_health = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   filter(topic == "Overall Health" & response !="Very good") %>% 
-  mutate(response = forcats::fct_relevel(response, c("Poor", "Good", "Fair", "Excellent"))) 
+  mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good",  "Excellent")),
+         state = locationabbr,
+         county = locationdesc) 
 ```
 
 ```{r states}
 states_2002 = overall_health %>% 
   filter(year == 2002) %>% 
-  group_by(locationabbr) %>% 
+  group_by(state) %>% 
   summarize(n = n()) %>% 
   filter(n >= 7) %>% 
-  pull(locationabbr)
+  arrange(desc(n)) 
 
 states_2010 = overall_health %>% 
   filter(year == 2010) %>% 
-  group_by(locationabbr) %>% 
+  group_by(state) %>% 
   summarize(n = n()) %>% 
   filter(n >= 7) %>% 
-  pull(locationabbr)
+  arrange(desc(n)) 
 ```
-* In 2002, total `36` states (``r states_2002``) were observed at 7 or more locations. In 2010, total `45` states (``r states_2010``) were observed at 7 or more locations. 
+* In 2002, total `36` states ([most locations first]``r pull(states_2002, state)``) were observed at 7 or more locations. The range of the number of locations in the state is from `r max(pull(states_2002, n))` to `r min(pull(states_2002, n))`.
+* In 2010, total `45` states ([most locations first]``r pull(states_2010, state)``) were observed at 7 or more locations. The range of the number of locations in the state is from `r max(pull(states_2010, n))` to `r min(pull(states_2010, n))`.
+* The maximum number of locations in the state increase in 2010 comparing to 2002. 
+
 ```{r excellent}
 overall_health %>% 
   filter(response == "Excellent") %>% 
-  group_by(locationabbr,year) %>% 
+  group_by(state,year) %>% 
   summarize(mean_data_value = mean(data_value)) %>% 
-  ggplot(aes(x = year, y = mean_data_value, color = locationabbr)) +
+  arrange(mean_data_value) %>% 
+  ggplot(aes(x = year, y = mean_data_value, color = state)) +
   geom_line() +
   labs(title = "Average data value over time within a state",
-       subtitle = "limited to Excellent responses")
+       subtitle = "limited to Excellent responses",
+       x = "Year",
+       y = "Mean data-value(%)")
 ```
+
+* Most of states share the similar pattern of mean `data_value`, and it fluctuates between 15% and 30%. However, mean`data_value` of state `WV` in 2005 and 2009, and state `IN` in 2007 is obviously lower than 15%.
 
 ```{r two-panel}
 data_value_2006 = overall_health %>%
   filter(year == 2006) %>% 
-  filter(locationabbr == "NY") %>% 
+  filter(state == "NY") %>% 
   group_by(response) %>% 
-  ggplot(aes(x = locationdesc, y = data_value, 
+  ggplot(aes(x = county, y = data_value, 
              color = response, group = response)) +
   geom_point() +
   geom_line() +
   theme(axis.text.x = element_text(angle = 45,hjust = 1),
         legend.position = "none") +
-  labs(title = "Distribution of data_value for responses among locations in NY State in 2006",
-       x = "")
+  labs(title = "Distribution of data-value for responses among locations in NY state in 2006",
+       x = "",
+       y = "Data-value(%)")
 
 data_value_2010 = overall_health %>%
   filter(year == 2010) %>% 
-  filter(locationabbr == "NY") %>% 
+  filter(state == "NY") %>% 
   group_by(response) %>% 
-  ggplot(aes(x = locationdesc, y = data_value, 
+  ggplot(aes(x = county, y = data_value, 
              color = response, group = response)) +
   geom_point() +
   geom_line() +
   theme(axis.text.x = element_text(angle = 45,hjust = 1))+
-  labs(title = "Distribution of data_value for responses among locations in NY State in 2010",
-       x = "")
+  labs(title = "Distribution of data-value for responses among locations in NY state in 2010",
+       x = "",
+       y = "Data-value(%)")
 data_value_2006 / data_value_2010
 ```
+
+* Most of counties in NY state share the similar pattern that `Poor` response associates with lowest `data_value`, `Good` response associates with highest `data_value`. `Excellent` response has higher value than `Fair` response, but lower than` Good` response both in 2006 and 2010. 
+* Only New York County has different pattern both in 2006 and 2010. For New York County, `Excellent` response has the highest value ,and `Good`, `Fair` and `Poor` responses are descending in order.
 
 ## Problem 3
 ```{r wrangle data, message=FALSE}
