--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -459,77 +459,105 @@ data("brfss_smart2010")
 overall_health = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
   filter(topic == "Overall Health" & response !="Very good") %>% 
-  mutate(response = forcats::fct_relevel(response, c("Poor", "Good", "Fair", "Excellent"))) 
+  mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good",  "Excellent")),
+         state = locationabbr,
+         county = locationdesc) 
 ```
 
 ``` r
 states_2002 = overall_health %>% 
   filter(year == 2002) %>% 
-  group_by(locationabbr) %>% 
+  group_by(state) %>% 
   summarize(n = n()) %>% 
   filter(n >= 7) %>% 
-  pull(locationabbr)
+  arrange(desc(n)) 
 
 states_2010 = overall_health %>% 
   filter(year == 2010) %>% 
-  group_by(locationabbr) %>% 
+  group_by(state) %>% 
   summarize(n = n()) %>% 
   filter(n >= 7) %>% 
-  pull(locationabbr)
+  arrange(desc(n)) 
 ```
 
-  - In 2002, total `36` states (`AZ, CO, CT, DE, FL, GA, HI, ID, IL, IN,
-    KS, LA, MA, MD, ME, MI, MN, MO, NC, NE, NH, NJ, NV, NY, OH, OK, OR,
-    PA, RI, SC, SD, TN, TX, UT, VT, WA`) were observed at 7 or more
-    locations. In 2010, total `45` states (`AL, AR, AZ, CA, CO, CT, DE,
-    FL, GA, HI, IA, ID, IL, IN, KS, LA, MA, MD, ME, MI, MN, MO, MS, MT,
-    NC, ND, NE, NH, NJ, NM, NV, NY, OH, OK, OR, PA, RI, SC, SD, TN, TX,
-    UT, VT, WA, WY`) were observed at 7 or more locations.
+  - In 2002, total `36` states (\[most locations first\]`PA, MA, NJ, CT,
+    FL, NC, MD, NH, NY, UT, CO, HI, MI, MN, OH, RI, WA, DE, GA, IL, KS,
+    LA, NE, OK, OR, SC, VT, AZ, ID, IN, ME, MO, NV, SD, TN, TX`) were
+    observed at 7 or more locations. The range of the number of
+    locations in the state is from 40 to 8.
+  - In 2010, total `45` states (\[most locations first\]`FL, NJ, TX, CA,
+    MD, NC, NE, WA, MA, NY, OH, CO, PA, SC, ID, ME, NM, UT, VT, CT, LA,
+    MN, NH, RI, TN, GA, HI, KS, MI, OR, AL, AR, AZ, DE, IN, MO, MT, ND,
+    OK, IA, IL, MS, NV, SD, WY`) were observed at 7 or more locations.
+    The range of the number of locations in the state is from 164 to 8.
+  - The maximum number of locations in the state increase in 2010
+    comparing to 2002.
 
 <!-- end list -->
 
 ``` r
 overall_health %>% 
   filter(response == "Excellent") %>% 
-  group_by(locationabbr,year) %>% 
+  group_by(state,year) %>% 
   summarize(mean_data_value = mean(data_value)) %>% 
-  ggplot(aes(x = year, y = mean_data_value, color = locationabbr)) +
+  arrange(mean_data_value) %>% 
+  ggplot(aes(x = year, y = mean_data_value, color = state)) +
   geom_line() +
   labs(title = "Average data value over time within a state",
-       subtitle = "limited to Excellent responses")
+       subtitle = "limited to Excellent responses",
+       x = "Year",
+       y = "Mean data-value(%)")
 ```
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/excellent-1.png" width="90%" />
 
+  - Most of states share the similar pattern of mean `data_value`, and
+    it fluctuates between 15% and 30%. However, mean`data_value` of
+    state `WV` in 2005 and 2009, and state `IN` in 2007 is obviously
+    lower than 15%.
+
+<!-- end list -->
+
 ``` r
 data_value_2006 = overall_health %>%
   filter(year == 2006) %>% 
-  filter(locationabbr == "NY") %>% 
+  filter(state == "NY") %>% 
   group_by(response) %>% 
-  ggplot(aes(x = locationdesc, y = data_value, 
+  ggplot(aes(x = county, y = data_value, 
              color = response, group = response)) +
   geom_point() +
   geom_line() +
   theme(axis.text.x = element_text(angle = 45,hjust = 1),
         legend.position = "none") +
-  labs(title = "Distribution of data_value for responses among locations in NY State in 2006",
-       x = "")
+  labs(title = "Distribution of data-value for responses among locations in NY state in 2006",
+       x = "",
+       y = "Data-value(%)")
 
 data_value_2010 = overall_health %>%
   filter(year == 2010) %>% 
-  filter(locationabbr == "NY") %>% 
+  filter(state == "NY") %>% 
   group_by(response) %>% 
-  ggplot(aes(x = locationdesc, y = data_value, 
+  ggplot(aes(x = county, y = data_value, 
              color = response, group = response)) +
   geom_point() +
   geom_line() +
   theme(axis.text.x = element_text(angle = 45,hjust = 1))+
-  labs(title = "Distribution of data_value for responses among locations in NY State in 2010",
-       x = "")
+  labs(title = "Distribution of data-value for responses among locations in NY state in 2010",
+       x = "",
+       y = "Data-value(%)")
 data_value_2006 / data_value_2010
 ```
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/two-panel-1.png" width="90%" />
+
+  - Most of counties in NY state share the similar pattern that `Poor`
+    response associates with lowest `data_value`, `Good` response
+    associates with highest `data_value`. `Excellent` response has
+    higher value than `Fair` response, but lower than`Good` response
+    both in 2006 and 2010.
+  - Only New York County has different pattern both in 2006 and 2010.
+    For New York County, `Excellent` response has the highest value ,and
+    `Good`, `Fair` and `Poor` responses are descending in order.
 
 ## Problem 3
 
