--- a/P8105_hw3_gl2677.md
+++ b/P8105_hw3_gl2677.md
@@ -52,22 +52,22 @@ instacart %>%
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/plot-1.png" width="90%" />
 
-  - From the plot, it shows most of items ordered in `fresh vegetables`,
-    `fresh fruits`, and `packaged vegetables fruits`, and totally around
-    375,000 items are oredered in these three aisles. People mainly use
-    The Instacart Online Grocery Shopping to buy vegetables and fruits
-    in 2017.
+  - There are 39 aisles with more than 10000 items ordered. The plot
+    shows most of items ordered in `fresh vegetables`, `fresh fruits`,
+    and `packaged vegetables fruits`, and totally around 375,000 items
+    are oredered in these three aisles. People mainly use The Instacart
+    Online Grocery Shopping to buy vegetables and fruits in 2017.
 
 <!-- end list -->
 
 ``` r
 instacart %>% 
-  filter(aisle == c("baking ingredients","dog food care", "packaged vegetables fruits")) %>%
+  filter(aisle %in% c("baking ingredients","dog food care", "packaged vegetables fruits")) %>%
   group_by(product_name, aisle) %>% 
   summarize(n = n()) %>% 
   group_by(aisle) %>% 
   filter(min_rank(desc(n)) <= 3) %>%
-  arrange(aisle) %>% 
+  arrange(aisle, desc(n)) %>% 
   ungroup() %>%
   select(-aisle) %>% 
   pivot_wider(names_from = product_name,
@@ -134,13 +134,19 @@ Light Brown Sugar
 
 <th style="text-align:right;">
 
-Organic Vanilla Extract
+Pure Baking Soda
 
 </th>
 
 <th style="text-align:right;">
 
-Pure Baking Soda
+Cane Sugar
+
+</th>
+
+<th style="text-align:right;">
+
+Snack Sticks Chicken & Rice Recipe Dog Treats
 
 </th>
 
@@ -152,13 +158,7 @@ Organix Chicken & Brown Rice Recipe
 
 <th style="text-align:right;">
 
-Organix Grain Free Chicken & Vegetable Dog Food
-
-</th>
-
-<th style="text-align:right;">
-
-Original Dry Dog
+Small Dog Biscuits
 
 </th>
 
@@ -170,13 +170,13 @@ Organic Baby Spinach
 
 <th style="text-align:right;">
 
-Organic Blueberries
+Organic Raspberries
 
 </th>
 
 <th style="text-align:right;">
 
-Organic Raspberries
+Organic Blueberries
 
 </th>
 
@@ -190,55 +190,55 @@ Organic Raspberries
 
 <td style="text-align:right;">
 
-157
+499
 
 </td>
 
 <td style="text-align:right;">
 
-122
+387
 
 </td>
 
 <td style="text-align:right;">
 
-140
+336
 
 </td>
 
 <td style="text-align:right;">
 
-13
+30
 
 </td>
 
 <td style="text-align:right;">
 
-14
+28
 
 </td>
 
 <td style="text-align:right;">
 
-9
+26
 
 </td>
 
 <td style="text-align:right;">
 
-3324
+9784
 
 </td>
 
 <td style="text-align:right;">
 
-1692
+5546
 
 </td>
 
 <td style="text-align:right;">
 
-1920
+4966
 
 </td>
 
@@ -249,8 +249,7 @@ Organic Raspberries
 </table>
 
   - `packaged vegetables fruits` is the most frequently ordered aisles,
-    and `dog food care` is the least frequently ordered ones. Organic
-    ingredients are often picked in these three aisles.
+    and `dog food care` is the least frequently ordered ones.
 
 <!-- end list -->
 
@@ -458,8 +457,8 @@ Pink Lady Apples
 data("brfss_smart2010")
 overall_health = brfss_smart2010 %>% 
   janitor::clean_names() %>% 
-  filter(topic == "Overall Health" & response !="Very good") %>% 
-  mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good",  "Excellent")),
+  filter(topic == "Overall Health") %>% 
+  mutate(response = forcats::fct_relevel(response, c("Poor", "Fair", "Good", "Very good", "Excellent")),
          state = locationabbr,
          county = locationdesc) 
 ```
@@ -468,6 +467,7 @@ overall_health = brfss_smart2010 %>%
 states_2002 = overall_health %>% 
   filter(year == 2002) %>% 
   group_by(state) %>% 
+  distinct(county) %>% 
   summarize(n = n()) %>% 
   filter(n >= 7) %>% 
   arrange(desc(n)) 
@@ -475,23 +475,21 @@ states_2002 = overall_health %>%
 states_2010 = overall_health %>% 
   filter(year == 2010) %>% 
   group_by(state) %>% 
+  distinct(county) %>% 
   summarize(n = n()) %>% 
   filter(n >= 7) %>% 
   arrange(desc(n)) 
 ```
 
-  - In 2002, total `36` states (\[most locations first\]`PA, MA, NJ, CT,
-    FL, NC, MD, NH, NY, UT, CO, HI, MI, MN, OH, RI, WA, DE, GA, IL, KS,
-    LA, NE, OK, OR, SC, VT, AZ, ID, IN, ME, MO, NV, SD, TN, TX`) were
-    observed at 7 or more locations. The range of the number of
-    locations in the state is from 40 to 8.
-  - In 2010, total `45` states (\[most locations first\]`FL, NJ, TX, CA,
-    MD, NC, NE, WA, MA, NY, OH, CO, PA, SC, ID, ME, NM, UT, VT, CT, LA,
-    MN, NH, RI, TN, GA, HI, KS, MI, OR, AL, AR, AZ, DE, IN, MO, MT, ND,
-    OK, IA, IL, MS, NV, SD, WY`) were observed at 7 or more locations.
-    The range of the number of locations in the state is from 164 to 8.
-  - The maximum number of locations in the state increase in 2010
-    comparing to 2002.
+  - In 2002, total `6` states (\[most locations first\]`PA, MA, NJ, CT,
+    FL, NC`) were observed at 7 or more locations. The range of the
+    number of locations in the state is from 10 to 7.
+  - In 2010, total `14` states (\[most locations first\]`FL, NJ, TX, CA,
+    MD, NC, NE, WA, MA, NY, OH, CO, PA, SC`) were observed at 7 or more
+    locations. The range of the number of locations in the state is from
+    41 to 7.
+  - The number of locations in the state increases in 2010 comparing to
+    2002.
 
 <!-- end list -->
 
@@ -523,10 +521,9 @@ data_value_2006 = overall_health %>%
   filter(year == 2006) %>% 
   filter(state == "NY") %>% 
   group_by(response) %>% 
-  ggplot(aes(x = county, y = data_value, 
-             color = response, group = response)) +
-  geom_point() +
-  geom_line() +
+  ggplot(aes(x = data_value, 
+             fill = response, group = response)) +
+  geom_density(alpha = .5) +
   theme(axis.text.x = element_text(angle = 45,hjust = 1),
         legend.position = "none") +
   labs(title = "Distribution of data-value for responses among locations in NY state in 2006",
@@ -537,11 +534,10 @@ data_value_2010 = overall_health %>%
   filter(year == 2010) %>% 
   filter(state == "NY") %>% 
   group_by(response) %>% 
-  ggplot(aes(x = county, y = data_value, 
-             color = response, group = response)) +
-  geom_point() +
-  geom_line() +
-  theme(axis.text.x = element_text(angle = 45,hjust = 1))+
+  ggplot(aes(x = data_value, 
+             fill = response, group = response)) +
+  geom_density(alpha = .5) +
+  theme(axis.text.x = element_text(angle = 45,hjust = 1)) +
   labs(title = "Distribution of data-value for responses among locations in NY state in 2010",
        x = "",
        y = "Data-value(%)")
@@ -550,14 +546,12 @@ data_value_2006 / data_value_2010
 
 <img src="P8105_hw3_gl2677_files/figure-gfm/two-panel-1.png" width="90%" />
 
-  - Most of counties in NY state share the similar pattern that `Poor`
-    response associates with lowest `data_value`, `Good` response
-    associates with highest `data_value`. `Excellent` response has
-    higher value than `Fair` response, but lower than`Good` response
-    both in 2006 and 2010.
-  - Only New York County has different pattern both in 2006 and 2010.
-    For New York County, `Excellent` response has the highest value ,and
-    `Good`, `Fair` and `Poor` responses are descending in order.
+  - For 2006 and 2010, the peaks of `data_value`increase in the order of
+    `Poor`,`Fair`, `Excellent`, `Good` and `Very good`.
+  - The peaks of `data_value` decrease for `Poor` and `Fair` in 2010
+    comparing to thoes in 2006, and the peaks of `data_value` increase
+    for Excellent`,`Good`and`Very good\` in 2010 comparing to thoes in
+    2006.
 
 ## Problem 3
 
@@ -574,7 +568,7 @@ activity = read_csv("./data/accel_data.csv") %>%
          weekday = factor(day %in% c("Sunday", "Saturday"), 
                           levels = c(TRUE, FALSE), 
                           labels = c("weekend", "weekday")),
-         day = forcats::fct_relevel(day, c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday","Sunday")))   
+         day = forcats::fct_relevel(day, c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday")))   
 ```
 
   - There are 50400 observations and 7 variables in `acticity` dataset.
@@ -615,6 +609,12 @@ week
 
 <th style="text-align:right;">
 
+Sunday
+
+</th>
+
+<th style="text-align:right;">
+
 Monday
 
 </th>
@@ -649,12 +649,6 @@ Saturday
 
 </th>
 
-<th style="text-align:right;">
-
-Sunday
-
-</th>
-
 </tr>
 
 </thead>
@@ -666,6 +660,12 @@ Sunday
 <td style="text-align:left;">
 
 1
+
+</td>
+
+<td style="text-align:right;">
+
+631105
 
 </td>
 
@@ -705,12 +705,6 @@ Sunday
 
 </td>
 
-<td style="text-align:right;">
-
-631105
-
-</td>
-
 </tr>
 
 <tr>
@@ -718,6 +712,12 @@ Sunday
 <td style="text-align:left;">
 
 2
+
+</td>
+
+<td style="text-align:right;">
+
+422018
 
 </td>
 
@@ -757,12 +757,6 @@ Sunday
 
 </td>
 
-<td style="text-align:right;">
-
-422018
-
-</td>
-
 </tr>
 
 <tr>
@@ -770,6 +764,12 @@ Sunday
 <td style="text-align:left;">
 
 3
+
+</td>
+
+<td style="text-align:right;">
+
+467052
 
 </td>
 
@@ -809,12 +809,6 @@ Sunday
 
 </td>
 
-<td style="text-align:right;">
-
-467052
-
-</td>
-
 </tr>
 
 <tr>
@@ -822,6 +816,12 @@ Sunday
 <td style="text-align:left;">
 
 4
+
+</td>
+
+<td style="text-align:right;">
+
+260617
 
 </td>
 
@@ -861,12 +861,6 @@ Sunday
 
 </td>
 
-<td style="text-align:right;">
-
-260617
-
-</td>
-
 </tr>
 
 <tr>
@@ -874,6 +868,12 @@ Sunday
 <td style="text-align:left;">
 
 5
+
+</td>
+
+<td style="text-align:right;">
+
+138421
 
 </td>
 
@@ -910,12 +910,6 @@ Sunday
 <td style="text-align:right;">
 
 1440
-
-</td>
-
-<td style="text-align:right;">
-
-138421
 
 </td>
 
